src/parser/snapshots/rbx_rsml__parser__tests__compiler_macro_recursion_guard.snap
---
source: src/parser/mod.rs
expression: compiled.tree_nodes
---
TreeNodeGroup {
    root: Some(
        RootTreeNode {
            attributes: Attributes {
                data: {},
            },
            static_attributes: {},
            child_rules: [
                0,
            ],
        },
    ),
    nodes: [
        Some(
            TreeNode {
                selector: Some(
                    "Frame",
                ),
                priority: None,
                tweens: {},
                attributes: Attributes {
                    data: {},
                },
                static_attributes: {},
                properties: Attributes {
                    data: {},
                },
                child_rules: [],
                parent: Root,
            },
        ),
    ],
}
